@@ -9,6 +9,12 @@ plugins {
 
 description = "Spring Boot"
 
+def tomcatConfigProperties = "$buildDir/tomcat-config-properties"
+
+configurations {
+	tomcatDistribution
+}
+
 dependencies {
 	annotationProcessor("org.apache.logging.log4j:log4j-core")
 
@@ -20,13 +26,16 @@ dependencies {
 	optional("com.atomikos:transactions-jms")
 	optional("com.atomikos:transactions-jta")
 	optional("com.fasterxml.jackson.core:jackson-databind")
+	optional("com.h2database:h2")
 	optional("com.google.code.gson:gson")
 	optional("com.oracle.database.jdbc:ucp")
+	optional("com.oracle.database.jdbc:ojdbc8")
 	optional("com.samskivert:jmustache")
 	optional("com.zaxxer:HikariCP")
 	optional("io.netty:netty-tcnative-boringssl-static")
 	optional("io.projectreactor:reactor-tools")
 	optional("io.projectreactor.netty:reactor-netty-http")
+	optional("io.r2dbc:r2dbc-pool")
 	optional("io.rsocket:rsocket-core")
 	optional("io.rsocket:rsocket-transport-netty")
 	optional("io.undertow:undertow-servlet") {
@@ -38,13 +47,13 @@ dependencies {
 	optional("junit:junit")
 	optional("org.apache.commons:commons-dbcp2")
 	optional("org.apache.httpcomponents:httpclient")
+	optional("org.apache.httpcomponents.client5:httpclient5")
 	optional("org.apache.logging.log4j:log4j-api")
 	optional("org.apache.logging.log4j:log4j-core")
 	optional("org.apache.tomcat.embed:tomcat-embed-core")
 	optional("org.apache.tomcat.embed:tomcat-embed-jasper")
 	optional("org.apache.tomcat:tomcat-jdbc")
 	optional("org.assertj:assertj-core")
-	optional("org.codehaus.btm:btm")
 	optional("org.codehaus.groovy:groovy")
 	optional("org.codehaus.groovy:groovy-xml")
 	optional("org.eclipse.jetty:jetty-servlets")
@@ -52,16 +61,19 @@ dependencies {
 	optional("org.eclipse.jetty:jetty-webapp")
 	optional("org.eclipse.jetty:jetty-alpn-conscrypt-server")
 	optional("org.eclipse.jetty.http2:http2-server")
+	optional("org.flywaydb:flyway-core")
 	optional("org.hamcrest:hamcrest-library")
 	optional("org.hibernate:hibernate-core")
 	optional("org.hibernate.validator:hibernate-validator")
-	optional("org.jboss:jboss-transaction-spi")
+	optional("org.jooq:jooq")
 	optional("org.liquibase:liquibase-core")
+	optional("org.postgresql:postgresql")
 	optional("org.slf4j:jul-to-slf4j")
 	optional("org.slf4j:slf4j-api")
 	optional("org.springframework:spring-messaging")
 	optional("org.springframework:spring-orm")
 	optional("org.springframework:spring-oxm")
+	optional("org.springframework:spring-r2dbc")
 	optional("org.springframework:spring-test")
 	optional("org.springframework:spring-web")
 	optional("org.springframework:spring-webflux")
@@ -74,36 +86,52 @@ dependencies {
 
 	testImplementation(project(":spring-boot-project:spring-boot-tools:spring-boot-test-support"))
 	testImplementation("com.google.appengine:appengine-api-1.0-sdk")
-	testImplementation("com.h2database:h2")
 	testImplementation("com.ibm.db2:jcc")
 	testImplementation("com.jayway.jsonpath:json-path")
 	testImplementation("com.microsoft.sqlserver:mssql-jdbc")
-	testImplementation("com.oracle.database.jdbc:ojdbc8")
 	testImplementation("com.squareup.okhttp3:okhttp")
 	testImplementation("com.sun.xml.messaging.saaj:saaj-impl")
 	testImplementation("io.projectreactor:reactor-test")
+	testImplementation("io.r2dbc:r2dbc-h2")
 	testImplementation("javax.xml.ws:jaxws-api")
 	testImplementation("mysql:mysql-connector-java")
 	testImplementation("net.sourceforge.jtds:jtds")
 	testImplementation("org.apache.derby:derby")
-	testImplementation("org.apache.httpcomponents:httpasyncclient")
 	testImplementation("org.awaitility:awaitility")
+	testImplementation("org.eclipse.jetty:jetty-client")
+	testImplementation("org.eclipse.jetty.http2:http2-client")
+	testImplementation("org.eclipse.jetty.http2:http2-http-client-transport")
 	testImplementation("org.firebirdsql.jdbc:jaybird-jdk18")
 	testImplementation("org.hsqldb:hsqldb")
 	testImplementation("org.junit.jupiter:junit-jupiter")
 	testImplementation("org.mariadb.jdbc:mariadb-java-client")
 	testImplementation("org.mockito:mockito-core")
 	testImplementation("org.mockito:mockito-junit-jupiter")
-	testImplementation("org.postgresql:postgresql")
 	testImplementation("org.springframework:spring-context-support")
 	testImplementation("org.springframework.data:spring-data-redis")
 	testImplementation("org.springframework.data:spring-data-r2dbc")
 	testImplementation("org.xerial:sqlite-jdbc")
 
-	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 	testRuntimeOnly("org.testcontainers:jdbc") {
 		exclude group: "javax.annotation", module: "javax.annotation-api"
 		exclude group: "javax.xml.bind", module: "jaxb-api"
+	}
+
+	tomcatDistribution("org.apache.tomcat:tomcat:${tomcatVersion}@zip")
+}
+
+task extractTomcatConfigProperties(type: Sync) {
+	destinationDir = file(tomcatConfigProperties)
+	from {
+		zipTree(configurations.tomcatDistribution.incoming.files.singleFile).matching {
+			include '**/conf/catalina.properties'
+		}.singleFile
+	}
+}
+
+sourceSets {
+	test {
+		output.dir(tomcatConfigProperties, builtBy: "extractTomcatConfigProperties")
 	}
 }
 
@@ -121,4 +149,8 @@ compileTestKotlin {
 
 compileJava {
 	doLast new org.springframework.boot.build.log4j2.ReproducibleLog4j2PluginsDatAction()
+}
+
+toolchain {
+	testJvmArgs.add("--add-opens=java.base/java.net=ALL-UNNAMED")
 }
